--- a/src/hoc/Layout.module.css
+++ b/src/hoc/Layout.module.css
@@ -55,5 +55,6 @@
   .main {
     padding-left: 2rem;
     padding-top: 80px;
+    flex: 1;
   }
 }
